--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/png" href="/image.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="BCD helps you track visual changes over time with calm, neutral guidance." />
-  <title>BCD — Breast Changes Detection</title>
+  <title>BCD - Breast Changes Detection</title>
 </head>
 
 <body>
